globus-ftp-control (6.5-1+gt6.@distro@) @distro@; urgency=low

  * Better fix for testing on localhost

 -- Globus Toolkit <support@globus.org>  Fri, 09 Jan 2015 13:43:35 -0500

globus-ftp-control (6.4-1+gt6.@distro@) @distro@; urgency=low

  * Missing check for netinet/tcp.h

 -- Globus Toolkit <support@globus.org>  Thu, 08 Jan 2015 16:18:35 -0500

globus-ftp-control (6.3-1+gt6.@distro@) @distro@; urgency=low

  * fix memleak

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:50:28 -0500

globus-ftp-control (6.2-1+gt6.@distro@) @distro@; urgency=low

  * Use localhost for tests

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 10:00:25 -0500

globus-ftp-control (6.1-2+gt6.@distro@) @distro@; urgency=low

  * Add build dependency on OpenSSL

 -- Globus Toolkit <support@globus.org>  Wed, 29 Oct 2014 10:31:58 -0400

globus-ftp-control (6.1-1+gt6.@distro@) @distro@; urgency=low

  * GT-477: Tracking TCP retransmits on the GridFTP server

 -- Globus Toolkit <support@globus.org>  Tue, 28 Oct 2014 17:11:55 -0500

globus-ftp-control (5.12-1+gt6.@distro@) @distro@; urgency=low

  * Doxygen markup fixes
  * Fix typos and clarify some documentation

 -- Globus Toolkit <support@globus.org>  Tue, 23 Sep 2014 14:40:29 -0400

globus-ftp-control (5.11-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-ftp-control (5.10-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-ftp-control (5.10-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-ftp-control (5.10-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:39 -0400

globus-ftp-control (5.9-1+gt6.@distro@) @distro@; urgency=low
