@@ -1,3 +1,9 @@
+globus-ftp-control (6.6-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix undefined return code
+
+ -- Globus Toolkit <support@globus.org>  Fri, 09 Jan 2015 15:25:32 -0500
+
 globus-ftp-control (6.5-1+gt6.@distro@) @distro@; urgency=low
 
   * Better fix for testing on localhost
